--- a/CustomizeFolderToolPlus/Icons.resx
+++ b/CustomizeFolderToolPlus/Icons.resx
@@ -163,4 +163,8 @@
   <data name="Plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Plus.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing">
+    <value>17, 17</value>
+  </data>
 </root>
