--- a/CustomizeFolderToolPlus/Icons.resx
+++ b/CustomizeFolderToolPlus/Icons.resx
@@ -118,50 +118,50 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Color00" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color00.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon01" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon01.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color01" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color01.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon02.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color02.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon03" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon03.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color03" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color03.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon04" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon04.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color04" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color04.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon05" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon05.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color05" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color05.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon06" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon06.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color06" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color06.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon07" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon07.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color07" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color07.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon08" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon08.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color08" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color08.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon09" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon09.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color09" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color09.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon10.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color10" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color10.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon11.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color11.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon12.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Color12" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Color12.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Icon13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon13.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Default" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Default.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="IconAdd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IconAdd.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Plus.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="IconDefault" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\IconDefault.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing">
